2005-06-30 Louis Lagendijk <louis.lagendijk@gmail.com>

	* configure.ac: Actually test whether libc has IPv6 support.

2005-06-28 Paul Jakma <paul.jakma@sun.com>

	* INSTALL.quagga.txt: GNU make is required now, because of manual
	  automatic rules in solaris/Makefile.am. (If someone knows how
	  to do these in a better way..).
	  GNU AWK is required for CVS checkout builds.

2005-06-01 Paul Jakma <paul.jakma@sun.com>

	* NEWS: bgpd work queues and ripd auth-mode change

2005-05-07 Yar Tikhiy <yar@comp.chem.msu.su>

	* configure.ac: Check for OSes which support passing ifindex in
	  struct ip_mreq.

2005-04-29 Paul Jakma <paul.jakma@sun.com>

	* NEWS: Added some more 0.99 news.
	* configure.ac: bump to 0.99.1 (0.99.0 was never released except
	  via CVS snapshots)

2005-04-25 Paul Jakma <paul.jakma@sun.com>

	* HACKING: Add some notes about build system changes, to
	  document common oversights (common for me anyway).
	  Seperate sections with two newlines, easier to read.

2005-04-16 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* configure.ac: Added AC_ARG_ENABLE(time-check).  By default,
	  warning messages will now be printed for threads or commands that take
	  longer than 5 seconds, but this configure argument can be used
	  to disable the checks or change the threshold.

2005-04-16 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: check for gawk, needed to build memtypes.h

2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* configure.ac: Move AC_CANONICAL_* stuff before AM_INIT_AUTOMAKE to
	  eliminate warning message about AC_ARG_PROGRAM being called
	  before AC_CANONICAL_TARGET.

2005-04-11 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Call AC_CANONICAL_{BUILD,TARGET} macros. Target isnt
	  set otherwise, afaict. AC_SUBST enable_{user,group,vty_group} and
	  quagga_statedir - the Solaris package bits for one need this.
	  configure the solaris/ Makefile.
	* Makefile.am: solaris is a subdir - unconditional or else it wont